[package]
name = "pathfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
tokio = { version = "1", features = ["full"] }