[package]
name = "pathfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
tokio = { version = "1", features = ["full"] }
eyre = { version = "0.6.8" }
ahash = "0.8.0"